--- a/Wishlist.html
+++ b/Wishlist.html
@@ -338,6 +338,6 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+   <!--- <script src="script.js"></script>-->
 </body>
 </html>
